--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,28 @@
---- #YAML:1.0
-name:               Net-IMAP-Client
-version:            0.9501
-abstract:           Not so simple IMAP client library
+---
+abstract: 'Not so simple IMAP client library'
 author:
-    - Mihai Bazon <mihai.bazon@gmail.com>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Mihai Bazon <mihai.bazon@gmail.com>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Encode:               0
-    Encode::MIME::Header:  0
-    IO::Socket::INET:     0
-    IO::Socket::SSL:      0
-    List::MoreUtils:      0
-    List::Util:           0
-    Test::More:           0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.132830'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-IMAP-Client
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Encode: 0
+  Encode::MIME::Header: 0
+  IO::Socket::INET: 0
+  IO::Socket::SSL: 0
+  List::MoreUtils: 0
+  List::Util: 0
+  Test::More: 0
+version: 0.9502
